fix: spacings and colors on main div

--- a/challenges/job-listings/src/index.css
+++ b/challenges/job-listings/src/index.css
@@ -8,4 +8,8 @@
 	html {
 		font-family: Spartan, sans-serif;
 	}
+
+	#root {
+		@apply bg-cyan;
+	}
 }
